# changelogging

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  changelogging.schema.json  changelogging.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml  release.yml  test.yml
changelog/: index.html
changelogging/: __init__.py  __main__.py  build.py  changelogging.toml  config.py  constants.py  defaults.py  fragment.py  fragments.py  git.py  main.py  typing.py  utils.py
changes/: 5.change.md  5.feature.md  5.fix.md  6.change.md  7.fix.md  9.fix.md
code_of_conduct/: index.html
contributing/: index.html
docs/: reference.md  usage.md
examples/: CHANGELOG.md
reference/: index.html
search/: search_index.json
security/: index.html
src/: app.rs  build.rs  builder.rs  cli.rs  config.rs  context.rs  create.rs  date.rs  defaults.toml  discover.rs  fragment.rs  fragments.rs  git.rs  init.rs  lib.rs  macros.rs  main.rs  options.rs  paths.rs  workspace.rs
src/commands/: build.rs  create.rs  mod.rs  preview.rs
tests/: CHANGELOG.md  CHANGELOG_RESULT.md  TEMPLATE.md  changelogging.toml  default.toml  test.toml  test_build.py  test_config.py  test_fragments.py  test_utils.py
tests/changes/: 13.feature.md  22.change.md  34.fix.md  42.deprecation.md  69.removal.md  7.security.md  96.internal.md  changelogging.toml
usage/: index.html
