[package]
name = "changelogging"
version = "0.2.2"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2021"
description = "Building changelogs from fragments."
documentation = "https://docs.rs/changelogging"
readme = "README.md"
repository = "https://github.com/nekitdev/changelogging"
license = "MIT"
keywords = ["changelog", "changes"]
categories = ["command-line-utilities", "development-tools"]

[dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dependencies.edit]
version = "0.1.5"

[dependencies.itertools]
version = "0.13.0"

[dependencies.handlebars]
version = "5.1.2"

[dependencies.miette]
version = "7.2.0"
features = ["fancy"]

[dependencies.thiserror]
version = "1.0.60"

[dependencies.textwrap]
version = "0.16.1"
default-features = false

[dependencies.time]
version = "0.3.36"
features = ["serde", "parsing", "macros"]

[dependencies.toml]
version = "0.8.12"
features = ["parse"]

[dependencies.serde]
version = "1.0.201"
features = ["derive"]
