[package]
name = "changelogging"
version = "0.7.0"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2021"
description = "Building changelogs from fragments."
documentation = "https://docs.rs/changelogging"
readme = "README.md"
repository = "https://github.com/nekitdev/changelogging"
license = "MIT"
keywords = ["changelog", "changes"]
categories = ["command-line-utilities", "development-tools"]

[dependencies.clap]
version = "4.5.23"
features = ["derive"]

[dependencies.edit]
version = "0.1.5"

[dependencies.handlebars]
version = "6.2.0"

[dependencies.itertools]
version = "0.13.0"

[dependencies.miette]
version = "7.4.0"
features = ["fancy"]

[dependencies.serde]
version = "1.0.216"
features = ["derive"]

[dependencies.textwrap]
version = "0.16.1"
default-features = false

[dependencies.thiserror]
version = "2.0.9"

[dependencies.time]
version = "0.3.37"
features = ["serde", "parsing", "macros"]

[dependencies.toml]
version = "0.8.19"
features = ["parse"]
