[tool.poetry]
name = "changelogging"
version = "1.4.0"
description = "Building changelogs from fragments."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/changelogging"
repository = "https://github.com/nekitdev/changelogging"
documentation = "https://nekitdev.github.io/changelogging"

keywords = ["python", "changelog", "changes"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Discord = "https://nekit.dev/discord"
Funding = "https://patreon.com/nekitdev"
Issues = "https://github.com/nekitdev/changelogging/issues"

[[tool.poetry.packages]]
include = "changelogging"

[tool.poetry.scripts]
changelogging = "changelogging.main:changelogging"

[tool.poetry.dependencies]
python = ">= 3.8"

attrs = "^23.2.0"
click = "^8.1.7"
toml = "^0.10.2"
yarl = "^1.9.4"

typing-aliases = "^1.7.0"
typing-extensions = "^4.9.0"

pendulum = "^3.0.0"

entrypoint = "^2.0.1"
versions = "^2.1.1"
funcs = "^0.9.0"
wraps = "^0.9.0"
iters = "^0.15.0"

[tool.poetry.group.format.dependencies]
ruff = "0.2.2"

[tool.poetry.group.check.dependencies]
mypy = "1.8.0"

types-toml = "0.10.8.7"

[tool.poetry.group.test.dependencies]
coverage = "7.4.3"
pytest = "8.0.2"
pytest-cov = "4.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-material = "9.5.11"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.24.0"
extras = ["python"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--cov changelogging"
testpaths = ["tests"]

[tool.coverage.run]
source = ["changelogging"]

omit = ["changelogging/git.py", "changelogging/main.py", "changelogging/__main__.py"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: never",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "@abstractmethod",
    "raise NotImplementedError",
    "raise AssertionError",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage"

[tool.mypy]
strict = true

[tool.changelogging]
name = "changelogging"
version = "1.4.0"
url = "https://github.com/nekitdev/changelogging"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["security", "feature", "change", "fix", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.9.0"]
build-backend = "poetry.core.masonry.api"
