[project]
name = "changelogging"
version = "2.5.0"
description = "Building changelogs from fragments."
readme = "README.md"
requires-python = ">= 3.8"
license.file = "LICENSE"
keywords = ["changelog", "changes"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/nekitdev/changelogging"
Chat = "https://nekit.dev/chat"
Documentation = "https://docs.rs/changelogging"
Funding = "https://nekit.dev/funding"
Issues = "https://github.com/nekitdev/changelogging/issues"
Repository = "https://github.com/nekitdev/changelogging"

[tool.maturin]
bindings = "bin"
strip = true

[build-system]
requires = ["maturin >= 1.7.0"]
build-backend = "maturin"
